--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="https://arkodevmukherjee.github.io/iCoder">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="https://arkodevmukherjee.github.io/iCoder/Contact.html">Contact</a>
           </li>
         </ul>
         <form class="d-flex">
